--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,37 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-		  package="com.daubli.ndimonitor">
-	<uses-permission android:name="android.permission.INTERNET"/>
-	<application
-			android:allowBackup="true"
-			android:icon="@mipmap/ic_launcher"
-			android:label="@string/app_name"
-			android:roundIcon="@mipmap/ic_launcher_round"
-			android:supportsRtl="true"
-			android:name="de.daubli.ndimonitor.NdiMonitorApplication"
-			android:largeHeap="true"
-	>
-		<activity
-				android:name="de.daubli.ndimonitor.MainActivity"
-				android:exported="true"
-				android:theme="@style/Theme.NdiFinder">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN"/>
+    package="com.daubli.ndimonitor">
 
-				<category android:name="android.intent.category.LAUNCHER"/>
-			</intent-filter>
-		</activity>
-		<activity
-				android:name="de.daubli.ndimonitor.StreamNDIVideoActivity"
-				android:screenOrientation="landscape"
-				android:exported="true"
-				android:theme="@style/Theme.AppCompat.NoActionBar"
-		/>
-		<activity
-				android:name="de.daubli.ndimonitor.SettingsActivity"
-				android:exported="true"
-				android:theme="@style/Theme.AppCompat.Light"
-		/>
-	</application>
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <application
+        android:name="de.daubli.ndimonitor.NdiMonitorApplication"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:largeHeap="true"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true">
+        <activity
+            android:name="de.daubli.ndimonitor.MainActivity"
+            android:launchMode="singleTask"
+            android:exported="true"
+            android:theme="@style/Theme.NdiFinder">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.HOME" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="de.daubli.ndimonitor.StreamNDIVideoActivity"
+            android:exported="true"
+            android:screenOrientation="landscape"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity
+            android:name="de.daubli.ndimonitor.SettingsActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Light" />
+    </application>
 
 </manifest>
